--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-simple-spinner",
-  "version": "0.0.1",
+  "name": "reactjs-simple-spinner",
+  "version": "0.0.0",
   "description": "A simple, flexible spinner for React.js",
   "main": "build/react-simple-spinner.js",
   "peerDependencies": {
